разметка главной страницы

--- a/blank.html
+++ b/blank.html
@@ -63,7 +63,7 @@
             
             <ul>
               <li>
-                <a href="#">Компания</a>
+                <a href="index.html">Компания</a>
               </li>
               <li>
                 <a href="blank.html">Новости</a>
