--- a/index.html
+++ b/index.html
@@ -155,26 +155,31 @@
       </section>
       <section>
         <h2>Сервисы</h2>
-        <p>Хороший интернет-магазин отличается от плохого не только ценами!
+        <p>Хороший интернет-магазин отличается от плохого не только ценами!          
           Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
-          <div class="delivery">
-            <button>Доставка</button>
-            <p>Мы с удовольствием доставим ваш товар к нашему подъезду совершенно бесплатно!
-              Ведь мы неплохо заработаем, поднимая его на ваш этаж!</p>
-          </div>
-          <div class="guarantee">
-            <button>Гарантия</button>
-            <p>Если купленный у нас товар поломается, или заискрит,
-              а также в случае пожара, спровоцированного его возгоранием, вы всегда можете быть уверены в нашей гарантии.
+        <div>
+          <button>Доставка</button>
+          <button>Гарантия</button>
+          <button>Кредит</button>
+        </div>
+        <div class="delivery">
+          <h3>Доставка</h3>
+          <p>Мы с удовольствием доставим ваш товар к нашему подъезду совершенно бесплатно!
+            Ведь мы неплохо заработаем, поднимая его на ваш этаж!</p>
+        </div>
+        <div class="guarantee">
+          <h3>Гарантия</h3>
+          <p>Если купленный у нас товар поломается, или заискрит,
+            а также в случае пожара, спровоцированного его возгоранием, вы всегда можете быть уверены в нашей гарантии.
             Мы обменяем сгоревший товар на новый. Дом уж восстановите как-нибудь сами.</p>
-          </div>
-          <div class="credit">
-            <button>Кредит</button>
-            <p>Залезть в долговую яму стало проще!
-              Кредитные консультанты придут вам на помощь.
-            </p>
-            <a href="blank.html">Отправить заявку</a>
-          </div>
+        </div>
+        <div class="credit">
+          <h3>Кредит</h3>
+          <p>Залезть в долговую яму стало проще!
+            Кредитные консультанты придут вам на помощь.
+          </p>
+          <a href="blank.html">Отправить заявку</a>
+        </div>
       </section>
       <div>
         <div>
@@ -197,7 +202,7 @@
           <h2>Контакты</h2>
           <p>Вы можете забрать товар сами, заехав в наш офис:</p>
           <a href="#"><img src="https://via.placeholder.com/300x158" alt="Карта офиса 'Техномарт'"></a>
-          <a href="blank.html">Заблудились? Напишите нам!</a>
+          <button>Заблудились? Напишите нам!</button>
         </div>
       </div>
     </main>
