--- a/catalog.html
+++ b/catalog.html
@@ -29,7 +29,7 @@
         <nav>
             <ul>
               <li>
-                <a href="#">Главная</a>
+                <a href="index.html">Главная</a>
               </li>
               <li>
                 <a href="blank.html">Компания</a>
