--- a/catalog.html
+++ b/catalog.html
@@ -7,12 +7,12 @@
 <body>
     <header>
         <div>
-            <a>Техномарт</a>
+            <a href="index.html">Техномарт</a>
             <form action="#" method="POST">
               <input type="text" name="search" placeholder="Поиск:">
             </form>
             <a href="blank.html">Закладки: 0</a>
-            <a href="blank.html">Корзина: 0</a>
+            <a href="blank.html">Корзина: 10</a>
             <a href="blank.html">Оформить заказ</a>
         </div>
         <div>
@@ -22,8 +22,9 @@
               <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
             </div>
             <div>
-              <a>Войти</a>
-              <a>Регистрация</a>
+                <a href="blank.html">Равшан Джамшутович</a>                
+                <a href="blank.html">Мои заказы</a>
+                <a href="blank.html">Личный кабинет</a>
             </div>  
         </div>
         <nav>
@@ -54,7 +55,228 @@
     </header>
 
     <main>
+        <h1>Перфораторы</h1>
 
+        <ul>
+            <li>
+                <a href="index.html">Главная</a>
+            </li>
+            <li>
+                <a href="catalog.html">Каталог</a>
+            </li>
+            <li>
+                <a href="blank.html">Инструмент</a>
+            </li>
+            <li>Перфораторы</li>
+        </ul>
+
+        <section>
+            <h2>Фильтр:</h2>
+            <form method="get" action="https://echo.htmlacademy.ru">
+                <fieldset>
+                    <legend>Цена:</legend>
+                        <input type="range" min="0" max="30000" value="20000" step="100">
+                        <input type="text" name="min" value="0">-
+                        <input type="text" name="max" value="30000">                    
+                </fieldset>
+                <fieldset>
+                    <legend>Производители</legend>
+                    <ul>
+                        <li>
+                            <input type="checkbox" name="bosch" id="filter-bosh" checked>
+                            <label for="filter-bosch">BOSCH</label>
+                        </li>
+                        <li>
+                            <input type="checkbox" name="interskol" id="filter-interskol">
+                            <label for="filter-interskol">Интерскол</label>
+                        </li>
+                        <li>
+                            <input type="checkbox" name="makita" id="filter-makita" checked>
+                            <label for="filter-makita">Makita</label>
+                        </li>
+                        <li>
+                            <input type="checkbox" name="dewalt" id="filter-dewalt">
+                            <label for="filter-dewalt">Dewalt</label>
+                        </li>
+                        <li>
+                            <input type="checkbox" name="hitachi" id="filter-hitachi">
+                            <label for="filter-hitachi">Hitachi</label>
+                        </li>
+                    </ul>
+                </fieldset>
+                <fieldset>
+                    <legend>Питание</legend>
+                    <ul>
+                        <li>
+                            <input type="radio" name="power" value="battery" id="filter-battery" checked>
+                            <label for="filter-battery">Аккумуляторные</label>
+                        </li>
+                        <li>
+                            <input type="radio" name="power" value="main" id="filter-main">
+                            <label for="filter-main">Сетевые</label>
+                        </li>
+                    </ul>
+                </fieldset>
+                <button type="submit">Показать</button>
+            </form>
+        </section>
+        <div>
+            <p>Сортировка:</p>
+            <a href="#">По цене</a>
+            <a href="#">По типу</a>
+            <a href="#">По функционалу</a>
+            <a href="#">&#11015;</a>
+            <a href="#">&#11014;</a>
+        </div>
+        <section>
+            <h2>Список перфораторов</h2>
+            <ul>
+                <li>
+                    <a href="blank.html">
+                        <h3>Перфоратор BOSCH BFG 6000</h3>
+                        <p>
+                            <img src="https://via.placeholder.com/150x130" alt="Перфоратор BOSCH BFG 6000">
+                        </p>
+                    </a>
+                    <p>
+                    <del>30500 р.</del>
+                    25500 р.
+                    <button>Купить</button>
+                    <a href="#">В закладки</a>
+                    </p>
+                </li>
+                <li>
+                    <a href="blank.html">
+                        <h3>Перфоратор BOSCH BFG 6000</h3>
+                        <p>
+                            <img src="https://via.placeholder.com/150x130" alt="Перфоратор BOSCH BFG 6000">
+                        </p>
+                    </a>
+                    <p>
+                    <del>30500 р.</del>
+                    25500 р.
+                    <button>Купить</button>
+                    <a href="#">В закладки</a>
+                    </p>
+                </li>
+                <li>
+                    <a href="blank.html">
+                        <h3>Перфоратор BOSCH BFG 6000</h3>
+                        <p>
+                            <img src="https://via.placeholder.com/150x130" alt="Перфоратор BOSCH BFG 6000">
+                        </p>
+                    </a>
+                    <p>
+                    <del>30500 р.</del>
+                    25500 р.
+                    <button>Купить</button>
+                    <a href="#">В закладки</a>
+                    </p>
+                </li>
+                <li>
+                    <a href="blank.html">
+                        <h3>Перфоратор BOSCH BFG 3000</h3>
+                        <p>
+                            <img src="https://via.placeholder.com/150x130" alt="Перфоратор BOSCH BFG 6000">
+                        </p>
+                    </a>
+                    <p>
+                    <del>22500 р.</del>
+                    15500 р.
+                    <button>Купить</button>
+                    <a href="#">В закладки</a>
+                    </p>
+                </li>
+                <li>
+                    <a href="blank.html">
+                        <h3>Перфоратор BOSCH BFG 6000</h3>
+                        <p>
+                            <img src="https://via.placeholder.com/150x130" alt="Перфоратор BOSCH BFG 6000">
+                        </p>
+                    </a>
+                    <p>
+                    <del>30500 р.</del>
+                    25500 р.
+                    <button>Купить</button>
+                    <a href="#">В закладки</a>
+                    </p>
+                </li>
+                <li>
+                    <a href="blank.html">
+                        <h3>Перфоратор BOSCH BFG 2000</h3>
+                        <p>
+                            <img src="https://via.placeholder.com/150x130" alt="Перфоратор BOSCH BFG 6000">
+                        </p>
+                    </a>
+                    <p>
+                    12500 р.
+                    <button>Купить</button>
+                    <a href="#">В закладки</a>
+                    </p>
+                </li>
+                <li>
+                    <a href="blank.html">
+                        <h3>Перфоратор BOSCH BFG 3000</h3>
+                        <p>
+                            <img src="https://via.placeholder.com/150x130" alt="Перфоратор BOSCH BFG 6000">
+                        </p>
+                    </a>
+                    <p>
+                    <del>22500 р.</del>
+                    15500 р.
+                    <button>Купить</button>
+                    <a href="#">В закладки</a>
+                    </p>
+                </li>
+                <li>
+                    <a href="blank.html">
+                        <h3>Перфоратор BOSCH BFG 6000</h3>
+                        <p>
+                            <img src="https://via.placeholder.com/150x130" alt="Перфоратор BOSCH BFG 6000">
+                        </p>
+                    </a>
+                    <p>
+                    <del>30500 р.</del>
+                    25500 р.
+                    <button>Купить</button>
+                    <a href="#">В закладки</a>
+                    </p>
+                </li>
+                <li>
+                    <a href="blank.html">
+                        <h3>Перфоратор BOSCH BFG 2000</h3>
+                        <p>
+                            <img src="https://via.placeholder.com/150x130" alt="Перфоратор BOSCH BFG 6000">
+                        </p>
+                    </a>
+                    <p>
+                    12500 р.
+                    <button>Купить</button>
+                    <a href="#">В закладки</a>
+                    </p>
+                </li>
+            </ul>
+            <ul>
+                <li>
+                    <a>1</a>
+                </li>
+                <li>
+                    <a href="#">2</a>
+                </li>
+                <li>
+                    <a href="#">3</a>
+                </li>
+                <li>
+                    <a href="#">Следующая</a>
+                </li>
+            </ul>
+        </section>
+        <section>
+            <h3>Пару слов о перфораторах</h3>
+            <p>Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне.
+                Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка. 
+                В ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и ударная дрель.</p>
+        </section>
     </main>
 
     <footer>
@@ -63,7 +285,7 @@
             
             <ul>
               <li>
-                <a href="#">Компания</a>
+                <a href="index.html">Компания</a>
               </li>
               <li>
                 <a href="blank.html">Новости</a>
