--- a/catalog.html
+++ b/catalog.html
@@ -83,7 +83,7 @@
                     <legend>Производители</legend>
                     <ul>
                         <li>
-                            <input type="checkbox" name="bosch" id="filter-bosh" checked>
+                            <input type="checkbox" name="bosch" id="filter-bosch" checked>
                             <label for="filter-bosch">BOSCH</label>
                         </li>
                         <li>
