--- a/catalog.html
+++ b/catalog.html
@@ -169,8 +169,8 @@
                     <p>
                     <del>30500 р.</del>
                     25500 р.
-                    <button>Купить</button>
-                    <a href="#">В закладки</a>
+                    <a href="#">Купить</a>
+                    <button>В закладки</button>                    
                     </p>
                 </li>
                 <li>
