--- a/index.html
+++ b/index.html
@@ -83,7 +83,13 @@
             <h3>Перфораторы</h3>
             <p>Настоящие мужские игрушки</p>
             <a href="catalog.html">Открыть каталог</a>
-            <img src="https://via.placeholder.com/300x123" alt="">
+            <img src="img/perforators.jpg" width="620" height="266" alt="Брутальный альфа-самец с перфоратором в руках">
+          </li>
+          <li>
+            <h3>Дрели</h3>
+            <p>Соседям на радость!</p>
+            <a href="catalog.html">Открыть каталог</a>
+            <img src="img/drills.jpg" width="620" height="266" alt="Мужчина сверлит кирпичную стену дрелью">
           </li>
         </ul>
       </div>
@@ -96,25 +102,25 @@
         <div>
           <ul>
             <li>
-              <a href="#"><img src="https://via.placeholder.com/184x164" alt="Перфоратор BOSCH BFG 9000"></a>
+              <a href="#"><img src="img/popular-items/bosch_bfg_9000.jpg" width="184" height="164" alt="#"></a>
               <p>Перфоратор BOSCH BFG 9000</p>
               <del>32500 р.</del>
               <p>25500 р.</p>              
             </li>
             <li>
-              <a href="#"><img src="https://via.placeholder.com/127x112" alt="Перфоратор BOSCH BFG 3000"></a>
+              <a href="#"><img src="img/popular-items/bosch_bfg_3000.jpg" width="127" height="112" alt="#"></a>
               <p>Перфоратор BOSCH BFG 3000</p>
               <del>22500 р.</del>            
               <p>15500 р.</p> 
             </li>
             <li>
-              <a href="#"><img src="https://via.placeholder.com/127x112" alt="Перфоратор BOSCH BFG 6000"></a>
+              <a href="#"><img src="img/popular-items/bosch_bfg_6000.jpg" width="144" height="128" alt="#"></a>
               <p>Перфоратор BOSCH BFG 6000</p>
               <del>30500 р.</del>
               <p>25500 р.</p>
             </li>
             <li>
-              <a href="#"><img src="https://via.placeholder.com/127x112" alt="Перфоратор BOSCH BFG 2000"></a>
+              <a href="#"><img src="img/popular-items/bosch_bfg_2000.jpg" width="127" height="112" alt="#"></a>
               <p>Перфоратор BOSCH BFG 2000</p>
               <del>22500 р.</del>
               <p>12500 р.</p>
@@ -131,28 +137,28 @@
         <div>
           <ul>
             <li>
-              <a href="#"><img src="https://via.placeholder.com/220x145" alt="BOSCH"></a>
+              <a href="#"><img src="img/logo/bosch.jpg" width="126" height="37" alt="#"></a>
             </li>
             <li>
-              <a href="#"><img src="https://via.placeholder.com/123x40" alt="Makita"></a>
+              <a href="#"><img src="img/logo/Makita.jpg" width="123" height="40" alt="#"></a>
             </li>
             <li>
-              <a href="#"><img src="https://via.placeholder.com/146x44" alt="DeWALT"></a>
+              <a href="#"><img src="img/logo/DeWALT.jpg" width="146" height="44" alt="#"></a>
             </li>
             <li>
-              <a href="#"><img src="https://via.placeholder.com/200x75" alt="Интерскол"></a>
+              <a href="#"><img src="img/logo/Интерскол.jpg" width="200" height="75" alt="#"></a>
             </li>
             <li>
-              <a href="#"><img src="https://via.placeholder.com/169x31" alt="Hitachi"></a>
+              <a href="#"><img src="img/logo/Hitachi.jpg" width="169" height="31" alt="#"></a>
             </li>
             <li>
-              <a href="#"><img src="https://via.placeholder.com/121x73" alt="LG"></a>
+              <a href="#"><img src="img/logo/LG.jpg" width="121" height="73" alt="#"></a>
             </li>
             <li>
-              <a href="#"><img src="https://via.placeholder.com/151x96" alt="AEG"></a>
+              <a href="#"><img src="img/logo/AEG.jpg" width="151" height="96" alt="#"></a>
             </li>
             <li>
-              <a href="#"><img src="https://via.placeholder.com/204x69" alt="Metabo"></a>
+              <a href="#"><img src="img/logo/Metabo.jpg" width="204" height="69" alt="#"></a>
             </li>            
           </ul>
         </div>
@@ -205,7 +211,7 @@
         <div>
           <h2>Контакты</h2>
           <p>Вы можете забрать товар сами, заехав в наш офис:</p>
-          <a href="#"><img src="https://via.placeholder.com/300x158" alt="Карта офиса 'Техномарт'"></a>
+          <a href="#"><img src="img/map.jpg" width="300" height="158" alt="Карта офиса 'Техномарт'"></a>
           <button>Заблудились? Напишите нам!</button>
         </div>
       </div>
