--- a/index.html
+++ b/index.html
@@ -102,25 +102,25 @@
         <div>
           <ul>
             <li>
-              <a href="#"><img src="img/popular-items/bosch_bfg_9000.jpg" width="184" height="164" alt="#"></a>
+              <a href="#"><img src="img/popular-items/bosch_bfg_9000.jpg" width="184" height="164" alt="Перфоратор BOSCH BFG 9000"></a>
               <p>Перфоратор BOSCH BFG 9000</p>
               <del>32500 р.</del>
               <p>25500 р.</p>              
             </li>
             <li>
-              <a href="#"><img src="img/popular-items/bosch_bfg_3000.jpg" width="127" height="112" alt="#"></a>
+              <a href="#"><img src="img/popular-items/bosch_bfg_3000.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 3000"></a>
               <p>Перфоратор BOSCH BFG 3000</p>
               <del>22500 р.</del>            
               <p>15500 р.</p> 
             </li>
             <li>
-              <a href="#"><img src="img/popular-items/bosch_bfg_6000.jpg" width="144" height="128" alt="#"></a>
+              <a href="#"><img src="img/popular-items/bosch_bfg_6000.jpg" width="144" height="128" alt="Перфоратор BOSCH BFG 6000"></a>
               <p>Перфоратор BOSCH BFG 6000</p>
               <del>30500 р.</del>
               <p>25500 р.</p>
             </li>
             <li>
-              <a href="#"><img src="img/popular-items/bosch_bfg_2000.jpg" width="127" height="112" alt="#"></a>
+              <a href="#"><img src="img/popular-items/bosch_bfg_2000.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 2000"></a>
               <p>Перфоратор BOSCH BFG 2000</p>
               <del>22500 р.</del>
               <p>12500 р.</p>
@@ -137,28 +137,28 @@
         <div>
           <ul>
             <li>
-              <a href="#"><img src="img/logo/bosch.jpg" width="126" height="37" alt="#"></a>
+              <a href="#"><img src="img/logo/bosch.jpg" width="126" height="37" alt="BOSCH"></a>
             </li>
             <li>
-              <a href="#"><img src="img/logo/Makita.jpg" width="123" height="40" alt="#"></a>
+              <a href="#"><img src="img/logo/Makita.jpg" width="123" height="40" alt="Makita"></a>
             </li>
             <li>
-              <a href="#"><img src="img/logo/DeWALT.jpg" width="146" height="44" alt="#"></a>
+              <a href="#"><img src="img/logo/DeWALT.jpg" width="146" height="44" alt="DeWALT"></a>
             </li>
             <li>
-              <a href="#"><img src="img/logo/Интерскол.jpg" width="200" height="75" alt="#"></a>
+              <a href="#"><img src="img/logo/Интерскол.jpg" width="200" height="75" alt="Интерскол"></a>
             </li>
             <li>
-              <a href="#"><img src="img/logo/Hitachi.jpg" width="169" height="31" alt="#"></a>
+              <a href="#"><img src="img/logo/Hitachi.jpg" width="169" height="31" alt="Hitachi"></a>
             </li>
             <li>
-              <a href="#"><img src="img/logo/LG.jpg" width="121" height="73" alt="#"></a>
+              <a href="#"><img src="img/logo/LG.jpg" width="121" height="73" alt="LG"></a>
             </li>
             <li>
-              <a href="#"><img src="img/logo/AEG.jpg" width="151" height="96" alt="#"></a>
+              <a href="#"><img src="img/logo/AEG.jpg" width="151" height="96" alt="AEG"></a>
             </li>
             <li>
-              <a href="#"><img src="img/logo/Metabo.jpg" width="204" height="69" alt="#"></a>
+              <a href="#"><img src="img/logo/Metabo.jpg" width="204" height="69" alt="Metabo"></a>
             </li>            
           </ul>
         </div>
