--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html class="page" lang="ru">
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Техномарт</title>
@@ -8,10 +8,12 @@
     <link rel="apple-touch-icon" href="favicon/180.png">
     <link rel="manifest" href="manifest.webmanifest">
   </head>
-  <body>
-    <header>
-      <div>
-        <a>Техномарт</a>
+  <body class="page-body">
+
+    <header class="main-header">
+
+      <div class="header-menu">
+        <a class="main-header-logo">Техномарт</a>
         <form action="#" method="POST">
           <input type="text" name="search" placeholder="Поиск:">
         </form>
@@ -22,16 +24,16 @@
       <div>
         <p><i>Интернет магазин строительных материалов и инструментов для ремонта</i></p>
         <div>
-          <a href="tel:+78125550555"> +7 (812) 555-05-55</a> 
+          <a class="header-phone" href="tel:+78125550555"> +7 (812) 555-05-55</a> 
           <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
         </div>
         <div>
-          <a>Войти</a>
-          <a>Регистрация</a>
+          <a class="login-link">Войти</a>
+          <a class="registration-link">Регистрация</a>
         </div>  
       </div>
-      <nav>
-        <ul>
+      <nav class="main-navigation">
+        <ul class="site-navigation">
           <li>
             <a href="#">Главная</a>
           </li>
@@ -56,70 +58,72 @@
         </ul>
       </nav>      
     </header>
-    <main>
-      <div>
-        <ul>
+
+    <main class="container">
+
+      <div class="promo">
+        <ul class="promo-list">
           <li>
-            <h3>Материалы</h3>
+            <h3 class="promo-item materials">Материалы</h3>
             <a href="#">На любой вкус</a>
           </li>
           <li>
-            <h3>Инструмент</h3>
+            <h3 class="promo-item tool">Инструмент</h3>
             <a href="#">На все случаи</a>
           </li>
           <li>
-            <h3>Техника</h3>
+            <h3 class="promo-item technics">Техника</h3>
             <a href="#">Для стройки</a>
           </li>
           <li>
-            <h3>Скидки 50%</h3>
+            <h3 class="promo-item sale">Скидки 50%</h3>
             <a href="#">На 350 товаров</a>
           </li>
           <li>
-            <h3>Доставка</h3>
+            <h3 class="promo-item delivery">Доставка</h3>
             <a href="#">Бесплатно</a>
           </li>
           <li>
-            <h3>Перфораторы</h3>
+            <h3 class="perforators">Перфораторы</h3>
             <p>Настоящие мужские игрушки</p>
             <a href="catalog.html">Открыть каталог</a>
             <img src="img/perforators.jpg" width="620" height="266" alt="Брутальный альфа-самец с перфоратором в руках">
           </li>
           <li>
-            <h3>Дрели</h3>
+            <h3 class="drills">Дрели</h3>
             <p>Соседям на радость!</p>
             <a href="catalog.html">Открыть каталог</a>
             <img src="img/drills.jpg" width="620" height="266" alt="Мужчина сверлит кирпичную стену дрелью">
           </li>
         </ul>
       </div>
-      <section>
-        <h2>Популярные товары</h2>
+      <section class="popular-items">
+        <h2 class="hidden">Популярные товары</h2>
         <div>
           <p>Популярные товары:</p>
-          <a>Все популярные товары</a>
+          <a class="button">Все популярные товары</a>
         </div>
         <div>
-          <ul>
-            <li>
+          <ul class="popular-items-list">
+            <li class="popular-items-item">
               <a href="#"><img src="img/popular-items/bosch_bfg_9000.jpg" width="184" height="164" alt="Перфоратор BOSCH BFG 9000"></a>
               <p>Перфоратор BOSCH BFG 9000</p>
               <del>32500 р.</del>
               <p>25500 р.</p>              
             </li>
-            <li>
+            <li class="popular-items-item">
               <a href="#"><img src="img/popular-items/bosch_bfg_3000.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 3000"></a>
               <p>Перфоратор BOSCH BFG 3000</p>
               <del>22500 р.</del>            
               <p>15500 р.</p> 
             </li>
-            <li>
+            <li class="popular-items-item">
               <a href="#"><img src="img/popular-items/bosch_bfg_6000.jpg" width="144" height="128" alt="Перфоратор BOSCH BFG 6000"></a>
               <p>Перфоратор BOSCH BFG 6000</p>
               <del>30500 р.</del>
               <p>25500 р.</p>
             </li>
-            <li>
+            <li class="popular-items-item">
               <a href="#"><img src="img/popular-items/bosch_bfg_2000.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 2000"></a>
               <p>Перфоратор BOSCH BFG 2000</p>
               <del>22500 р.</del>
@@ -128,49 +132,50 @@
           </ul>
         </div>
       </section>
-      <section>
-        <h2>Популярные производители</h2>
+      <section class="popular-manufacturers">
+        <h2 class="hidden">Популярные производители</h2>
         <div>
           <p>Популярные производители:</p>
           <a>Все производители</a>
         </div>
         <div>
-          <ul>
-            <li>
+          <ul class="popular-manufacturers-list">
+            <li class="popular-manufacturers-item">
               <a href="#"><img src="img/logo/bosch.jpg" width="126" height="37" alt="BOSCH"></a>
             </li>
-            <li>
+            <li class="popular-manufacturers-item">
               <a href="#"><img src="img/logo/Makita.jpg" width="123" height="40" alt="Makita"></a>
             </li>
-            <li>
+            <li class="popular-manufacturers-item">
               <a href="#"><img src="img/logo/DeWALT.jpg" width="146" height="44" alt="DeWALT"></a>
             </li>
-            <li>
+            <li class="popular-manufacturers-item">
               <a href="#"><img src="img/logo/Интерскол.jpg" width="200" height="75" alt="Интерскол"></a>
             </li>
-            <li>
+            <li class="popular-manufacturers-item">
               <a href="#"><img src="img/logo/Hitachi.jpg" width="169" height="31" alt="Hitachi"></a>
             </li>
-            <li>
+            <li class="popular-manufacturers-item">
               <a href="#"><img src="img/logo/LG.jpg" width="121" height="73" alt="LG"></a>
             </li>
-            <li>
+            <li class="popular-manufacturers-item">
               <a href="#"><img src="img/logo/AEG.jpg" width="151" height="96" alt="AEG"></a>
             </li>
-            <li>
+            <li class="popular-manufacturers-item">
               <a href="#"><img src="img/logo/Metabo.jpg" width="204" height="69" alt="Metabo"></a>
             </li>            
           </ul>
         </div>
       </section>
-      <section>
+
+      <section class="services">
         <h2>Сервисы</h2>
         <p>Хороший интернет-магазин отличается от плохого не только ценами!          
           Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
-        <div>
-          <button>Доставка</button>
-          <button>Гарантия</button>
-          <button>Кредит</button>
+        <div class="services-buttons">
+          <button class="services-button delivery-button">Доставка</button>
+          <button class="services-button guarantee-button">Гарантия</button>
+          <button class="services-button credit-button">Кредит</button>
         </div>
         <div class="delivery">
           <h3>Доставка</h3>
@@ -188,39 +193,45 @@
           <p>Залезть в долговую яму стало проще!
             Кредитные консультанты придут вам на помощь.
           </p>
-          <a href="blank.html">Отправить заявку</a>
+          <a class="button" href="blank.html">Отправить заявку</a>
         </div>
       </section>
-      <div>
-        <div>
-          <h2>Компания "Техномарт"</h2>
-          <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для
-            ремонта и строительства не оставит равнодушными любителей сэкономить на
-            гастарбайтерах.</p>
-          <p>
-            Мы можем доставить ваш товар в самые отдаленные точки России! 
-            Техномарт работает со многими транспортными компаниями:
-          </p>
-          <ul>
-            <li>Деловые линии</li>
-            <li>Автотрейдинг</li>
-            <li>ЖелДорЭкспедиция</li>
-          </ul>
-          <a href="blank.html">Подробнее о компании</a>
-        </div>
-        <div>
-          <h2>Контакты</h2>
-          <p>Вы можете забрать товар сами, заехав в наш офис:</p>
-          <a href="#"><img src="img/map.jpg" width="300" height="158" alt="Карта офиса 'Техномарт'"></a>
-          <button>Заблудились? Напишите нам!</button>
-        </div>
+
+      <div class="company">
+        <h2>Компания "Техномарт"</h2>
+        <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для
+          ремонта и строительства не оставит равнодушными любителей сэкономить на
+          гастарбайтерах.</p>
+        <p>
+          Мы можем доставить ваш товар в самые отдаленные точки России! 
+          Техномарт работает со многими транспортными компаниями:
+        </p>
+        <ul class="company-list">
+          <li class="company-item">Деловые линии</li>
+          <li class="company-item">Автотрейдинг</li>
+          <li class="company-item">ЖелДорЭкспедиция</li>
+        </ul>
+        <a class="button" href="blank.html">Подробнее о компании</a>
       </div>
+      <div class="contacts">
+        <h2>Контакты</h2>
+        <p>Вы можете забрать товар сами, заехав в наш офис:</p>
+        <a href="#"><img src="img/map.jpg" width="300" height="158" alt="Карта офиса 'Техномарт'"></a>
+        <button>Заблудились? Напишите нам!</button>
+      </div>
+
     </main>
-    <footer>
-      <div>
-        <a>Техномарт</a>
-        
-        <ul>
+
+    <footer class="main-footer">
+
+      <div class="footer-contacts">
+        <a href="#">Техномарт</a>
+        <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+        <a class="footer-phone" href="tel:+78125550555"> +7 (812) 555-05-55</a>
+      </div>
+
+      <div class="footer-navigation">
+        <ul class="footer-navigation-list">
           <li>
             <a href="#">Компания</a>
           </li>
@@ -240,11 +251,7 @@
       </div>
 
       <div>
-
-        <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
-        <a href="tel:+78125550555"> +7 (812) 555-05-55</a> 
-
-        <ul>
+        <ul class="footer-services-list">
           <li>
             <a href="blank.html">Материалы</a>
           </li>
@@ -260,20 +267,33 @@
         </ul>
       </div>
 
-      <div>
-        <p>&copy; 2010-2019 Компания "Техномарт"<br>
+      <div class="copyright">
+        <p>© 2010-2019 Компания "Техномарт"<br>
         Все права защищены</p>
+      </div>
+
+      <div class="footer-social">
         <ul>
-          <li><a href="#"></a>вконтакте</li>
-          <li><a href="#"></a>фейсбук</li>
-          <li><a href="#"></a>инстаграм</li>
-        </ul>  
-
-        <p>Обратная связь:</p>
+          <li>
+            <a class="social-button" href="#">вконтакте</a>
+          </li>
+          <li>
+            <a class="social-button" href="#">фейсбук</a>
+          </li>
+          <li>
+            <a class="social-button" href="#">инстаграм</a>
+          </li>
+        </ul>
+      </div>
+      <div class="footer-contacts">
+        <div>
+          <p>Обратная связь:</p>
         <a href="email:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
-
-        <p>Разработано -</p>
+        </div>
+        <div>
+          <p>Разработано -</p>
         <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
+        </div>        
       </div>
     </footer>    
   </body>
