--- a/catalog.html
+++ b/catalog.html
@@ -125,8 +125,8 @@
             <a href="#">По цене</a>
             <a href="#">По типу</a>
             <a href="#">По функционалу</a>
-            <a href="#">&#11015;</a>
-            <a href="#">&#11014;</a>
+            <a href="#">вверх</a>
+            <a href="#">вниз</a>
         </div>
         <section>
             <h2>Список перфораторов</h2>
