--- a/index.html
+++ b/index.html
@@ -17,23 +17,28 @@
       <div class="header-menu">
         <a class="main-header-logo">Техномарт</a>
         <form action="#" method="POST">
-          <input type="text" name="search" placeholder="Поиск:">
+          <input class="search" type="text" name="search" value="Поиск:">
         </form>
-        <a href="blank.html">Закладки: 0</a>
-        <a href="blank.html">Корзина: 0</a>
-        <a href="blank.html">Оформить заказ</a>
-      </div>
-      <div>
-        <p><i>Интернет магазин строительных материалов и инструментов для ремонта</i></p>
-        <div>
-          <a class="header-phone" href="tel:+78125550555"> +7 (812) 555-05-55</a> 
-          <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+        <div class="menu-button-wrap">
+          <a href="blank.html">Закладки: 0</a>
+          <a href="blank.html">Корзина: 0</a>
         </div>
-        <div>
-          <a class="login-link">Войти</a>
-          <a class="registration-link">Регистрация</a>
+        <a class="order-button" href="blank.html">Оформить заказ</a>
+      </div>
+      <div class="user-menu">
+        <p class="logo-text"><i>Интернет магазин<br> 
+          строительных материалов<br> 
+          и инструментов для ремонта</i></p>
+        <div class="contacts">
+          <a class="header-phone" href="tel:+78125550555"> +7 (812) 555-05-55</a> 
+          <p class="header-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+        </div>
+        <div class="user-navigation">
+          <a class="login-link" href="#">Войти</a>
+          <a class="registration-link" href="#">Регистрация</a>
         </div>  
       </div>
+
       <nav class="main-navigation">
         <ul class="site-navigation">
           <li>
@@ -65,80 +70,80 @@
 
       <div class="promo">
         <ul class="promo-list">
-          <li>
-            <h3 class="promo-item materials">Материалы</h3>
-            <a href="#">На любой вкус</a>
+          <li class="promo-item">
+            <h3>Материалы</h3>
+            <a class="promo-btn" href="#">На любой вкус</a>
           </li>
-          <li>
-            <h3 class="promo-item tool">Инструмент</h3>
-            <a href="#">На все случаи</a>
+          <li class="promo-item">
+            <h3>Инструмент</h3>
+            <a class="promo-btn" href="#">На все случаи</a>
           </li>
-          <li>
-            <h3 class="promo-item technics">Техника</h3>
-            <a href="#">Для стройки</a>
+          <li class="promo-item">
+            <h3>Техника</h3>
+            <a class="promo-btn" href="#">Для стройки</a>
           </li>
-          <li>
-            <h3 class="promo-item sale">Скидки 50%</h3>
-            <a href="#">На 350 товаров</a>
+          <li class="promo-item">
+            <h3>Скидки 50%</h3>
+            <a class="promo-btn" href="#">На 350 товаров</a>
           </li>
-          <li>
-            <h3 class="promo-item delivery">Доставка</h3>
-            <a href="#">Бесплатно</a>
-          </li>
-          <li>
-            <h3 class="perforators">Перфораторы</h3>
-            <p>Настоящие мужские игрушки</p>
-            <a href="catalog.html">Открыть каталог</a>
-            <img src="img/perforators.jpg" width="620" height="266" alt="Брутальный альфа-самец с перфоратором в руках">
-          </li>
-          <li>
-            <h3 class="drills">Дрели</h3>
-            <p>Соседям на радость!</p>
-            <a href="catalog.html">Открыть каталог</a>
-            <img src="img/drills.jpg" width="620" height="266" alt="Мужчина сверлит кирпичную стену дрелью">
+          <li class="promo-item">
+            <h3>Доставка</h3>
+            <a class="promo-btn" href="#">Бесплатно</a>
           </li>
         </ul>
+        <div class="slider">
+          <div class="perforators">
+            <h3>Перфораторы</h3>
+            <p>Настоящие мужские игрушки</p>
+            <a class="button catalog-button" href="catalog.html">Открыть каталог</a>
+          </div>
+          <div class="drills">
+            <h3>Дрели</h3>
+            <p>Соседям на радость!</p>
+            <a class="button catalog-button" href="catalog.html">Открыть каталог</a>
+          </div>        
+        </div>
       </div>
       <section class="popular-items">
         <h2 class="hidden">Популярные товары</h2>
-        <div>
-          <p>Популярные товары:</p>
+        <div class="popular-title-wrap">
+          <p class="title">Популярные товары:</p>
           <a class="button">Все популярные товары</a>
         </div>
         <div>
           <ul class="popular-items-list">
-            <li class="popular-items-item">
+            <li class="catalog-item">
               <a href="#"><img src="img/popular-items/bosch_bfg_9000.jpg" width="184" height="164" alt="Перфоратор BOSCH BFG 9000"></a>
               <p>Перфоратор BOSCH BFG 9000</p>
-              <del>32500 р.</del>
-              <p>25500 р.</p>              
+              <p class="old-price">32500 р.</p>
+              <p class="new-price">25500 р.</p>              
             </li>
-            <li class="popular-items-item">
+            <li class="catalog-item">
               <a href="#"><img src="img/popular-items/bosch_bfg_3000.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 3000"></a>
               <p>Перфоратор BOSCH BFG 3000</p>
-              <del>22500 р.</del>            
-              <p>15500 р.</p> 
+              <p class="old-price">22500 р.</p>            
+              <p class="new-price">15500 р.</p> 
             </li>
-            <li class="popular-items-item">
+            <li class="catalog-item">
               <a href="#"><img src="img/popular-items/bosch_bfg_6000.jpg" width="144" height="128" alt="Перфоратор BOSCH BFG 6000"></a>
               <p>Перфоратор BOSCH BFG 6000</p>
-              <del>30500 р.</del>
-              <p>25500 р.</p>
+              <p class="old-price">30500 р.</p>
+              <p class="new-price">25500 р.</p>
             </li>
-            <li class="popular-items-item">
+            <li class="catalog-item">
               <a href="#"><img src="img/popular-items/bosch_bfg_2000.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 2000"></a>
               <p>Перфоратор BOSCH BFG 2000</p>
-              <del>22500 р.</del>
-              <p>12500 р.</p>
+              <p class="old-price">22500 р.</p>
+              <p class="new-price">12500 р.</p>
             </li>
           </ul>
         </div>
       </section>
       <section class="popular-manufacturers">
         <h2 class="hidden">Популярные производители</h2>
-        <div>
-          <p>Популярные производители:</p>
-          <a>Все производители</a>
+        <div class="popular-title-wrap">
+          <p class="title">Популярные производители:</p>
+          <a class="button manufacturers-button" href="#">Все производители</a>
         </div>
         <div>
           <ul class="popular-manufacturers-list">
@@ -171,16 +176,16 @@
       </section>
 
       <section class="services">
-        <h2>Сервисы</h2>
+        <h2 class="title">Сервисы</h2>
         <p>Хороший интернет-магазин отличается от плохого не только ценами!          
           Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
         <div class="services-buttons">
-          <button class="services-button delivery-button">Доставка</button>
-          <button class="services-button guarantee-button">Гарантия</button>
-          <button class="services-button credit-button">Кредит</button>
+          <button>Доставка</button>
+          <button>Гарантия</button>
+          <button>Кредит</button>
         </div>
         <div class="delivery">
-          <h3>Доставка</h3>
+          <h3 class="title">Доставка</h3>
           <p>Мы с удовольствием доставим ваш товар к нашему подъезду совершенно бесплатно!
             Ведь мы неплохо заработаем, поднимая его на ваш этаж!</p>
         </div>
@@ -195,12 +200,12 @@
           <p>Залезть в долговую яму стало проще!
             Кредитные консультанты придут вам на помощь.
           </p>
-          <a class="button" href="blank.html">Отправить заявку</a>
+          <a class="button credit-button" href="blank.html">Отправить заявку</a>
         </div>
       </section>
 
       <div class="company">
-        <h2>Компания "Техномарт"</h2>
+        <h2 class="title">Компания "Техномарт"</h2>
         <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для
           ремонта и строительства не оставит равнодушными любителей сэкономить на
           гастарбайтерах.</p>
@@ -216,7 +221,7 @@
         <a class="button" href="blank.html">Подробнее о компании</a>
       </div>
       <div class="contacts">
-        <h2>Контакты</h2>
+        <h2 class="title">Контакты</h2>
         <p>Вы можете забрать товар сами, заехав в наш офис:</p>
         <a href="#"><img src="img/map.jpg" width="300" height="158" alt="Карта офиса 'Техномарт'"></a>
         <button>Заблудились? Напишите нам!</button>
