--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class="main-header">
 
       <div class="header-menu">
-        <a class="main-header-logo">Техномарт</a>
+        <a class="logo main-header-logo">Техномарт</a>
         <form action="#" method="POST">
           <input class="search" type="text" name="search" value="Поиск:">
         </form>
@@ -176,8 +176,8 @@
       </section>
 
       <section class="services">
-        <h2 class="title">Сервисы</h2>
-        <p>Хороший интернет-магазин отличается от плохого не только ценами!          
+        <h2 class="title services-title">Сервисы</h2>
+        <p class="slogan">Хороший интернет-магазин отличается от плохого не только ценами!<br>
           Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
         <div class="services-buttons">
           <button>Доставка</button>
@@ -186,18 +186,22 @@
         </div>
         <div class="delivery">
           <h3 class="title">Доставка</h3>
-          <p>Мы с удовольствием доставим ваш товар к нашему подъезду совершенно бесплатно!
-            Ведь мы неплохо заработаем, поднимая его на ваш этаж!</p>
+          <p class="slogan">Мы с удовольствием доставим ваш товар прямо<br> 
+            к вашему подъезду совершенно бесплатно!<br> 
+            Ведь мы неплохо заработаем, <br>
+            поднимая его на ваш этаж!</p>
         </div>
         <div class="guarantee">
-          <h3>Гарантия</h3>
-          <p>Если купленный у нас товар поломается, или заискрит,
-            а также в случае пожара, спровоцированного его возгоранием, вы всегда можете быть уверены в нашей гарантии.
-            Мы обменяем сгоревший товар на новый. Дом уж восстановите как-нибудь сами.</p>
+          <h3 class="title">Гарантия</h3>
+          <p class="slogan">Если купленный у нас товар поломается или заискрит, <br>
+            а также в случае пожара, спровоцированного его <br>
+            возгоранием, вы всегда можете быть уверены в нашей <br>
+            гарантии. Мы обменяем сгоревший товар на новый. <br>
+            Дом уж восстановите как-нибудь сами.</p>
         </div>
         <div class="credit">
-          <h3>Кредит</h3>
-          <p>Залезть в долговую яму стало проще!
+          <h3 class="title">Кредит</h3>
+          <p class="slogan">Залезть в долговую яму стало проще! <br>
             Кредитные консультанты придут вам на помощь.
           </p>
           <a class="button credit-button" href="blank.html">Отправить заявку</a>
@@ -205,11 +209,11 @@
       </section>
 
       <div class="company">
-        <h2 class="title">Компания "Техномарт"</h2>
-        <p>Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для
+        <h2 class="title company-title">Компания "Техномарт"</h2>
+        <p class="slogan">Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для
           ремонта и строительства не оставит равнодушными любителей сэкономить на
           гастарбайтерах.</p>
-        <p>
+        <p class="slogan">
           Мы можем доставить ваш товар в самые отдаленные точки России! 
           Техномарт работает со многими транспортными компаниями:
         </p>
@@ -221,10 +225,10 @@
         <a class="button" href="blank.html">Подробнее о компании</a>
       </div>
       <div class="contacts">
-        <h2 class="title">Контакты</h2>
-        <p>Вы можете забрать товар сами, заехав в наш офис:</p>
+        <h2 class="title contacts-title">Контакты</h2>
+        <p class="slogan">Вы можете забрать товар сами, заехав в наш офис:</p>
         <a href="#"><img src="img/map.jpg" width="300" height="158" alt="Карта офиса 'Техномарт'"></a>
-        <button>Заблудились? Напишите нам!</button>
+        <button class="button">Заблудились? Напишите нам!</button>
       </div>
 
     </main>
@@ -232,12 +236,12 @@
     <footer class="main-footer">
 
       <div class="footer-contacts">
-        <a href="#">Техномарт</a>
-        <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+        <a class="logo main-footer-logo" href="#">Техномарт</a>
+        <p class="footer-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
         <a class="footer-phone" href="tel:+78125550555"> +7 (812) 555-05-55</a>
       </div>
 
-      <div class="footer-navigation">
+      <div class="footer-navigation site-navigation" >
         <ul class="footer-navigation-list">
           <li>
             <a href="#">Компания</a>
@@ -273,34 +277,35 @@
           </li>
         </ul>
       </div>
-
-      <div class="copyright">
+      
+      <div class="footer-wrap">
+        <div class="copyright">
         <p>© 2010-2019 Компания "Техномарт"<br>
         Все права защищены</p>
-      </div>
-
-      <div class="footer-social">
-        <ul>
-          <li>
-            <a class="social-button" href="#">вконтакте</a>
-          </li>
-          <li>
-            <a class="social-button" href="#">фейсбук</a>
-          </li>
-          <li>
-            <a class="social-button" href="#">инстаграм</a>
-          </li>
-        </ul>
-      </div>
-      <div class="footer-contacts">
-        <div>
-          <p>Обратная связь:</p>
-        <a href="email:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
         </div>
-        <div>
-          <p>Разработано -</p>
-        <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
-        </div>        
+        <div class="footer-social">
+          <ul>
+            <li>
+              <a class="social-button" href="#">вконтакте</a>
+            </li>
+            <li>
+              <a class="social-button" href="#">фейсбук</a>
+            </li>
+            <li>
+              <a class="social-button" href="#">инстаграм</a>
+            </li>
+          </ul>
+        </div>
+        <div class="footer-contacts">
+          <div>
+            <p>Обратная связь:</p>
+          <a href="email:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+          </div>
+          <div>
+            <p>Разработано -</p>
+          <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
+          </div>        
+        </div>
       </div>
     </footer>    
   </body>
