--- a/catalog.html
+++ b/catalog.html
@@ -15,18 +15,21 @@
 <body class="page-body">
 
   <header class="main-header">
-    <div class="header-menu">
-      <a class="logo main-header-logo" href="index.html">Техномарт</a>
-      <form action="#" method="POST">
-        <input class="search" type="text" name="search" value="Поиск:">
-      </form>
-      <div class="menu-button-wrap">
-        <a href="blank.html">Закладки: 0</a>
-        <a class="cart not-empty-cart" href="blank.html">Корзина: 10</a>
+    <div class="main-header-bar">
+      <div class="header-menu">
+        <a class="logo main-header-logo" href="index.html">Техномарт</a>
+        <form class="search-form" action="#" method="POST">
+          <input class="search" type="text" name="search" value="Поиск:">
+        </form>
+        <div class="menu-button-wrap">
+          <a href="blank.html">Закладки: 0</a>
+          <a class="cart not-empty-cart" href="blank.html">Корзина: 10</a>
+        </div>
+        <a class="order-button" href="blank.html">Оформить заказ</a>
       </div>
-      <a class="order-button" href="blank.html">Оформить заказ</a>
     </div>
-    <div>
+    <div class="light-main-header-bar">
+    <div class="user-menu">
       <p class="logo-text"><i>Интернет магазин<br>
           строительных материалов<br>
           и инструментов для ремонта</i></p>
@@ -65,6 +68,7 @@
         </li>
       </ul>
     </nav>
+    </div>
   </header>
 
   <main class="container inner-page">
