сетка на гридах

--- a/index.html
+++ b/index.html
@@ -186,9 +186,9 @@
         </div>
         <div class="services-menu">
           <div class="services-buttons">
-            <button>Доставка</button>
-            <button>Гарантия</button>
-            <button>Кредит</button>
+            <button type="button">Доставка</button>
+            <button type="button">Гарантия</button>
+            <button type="button">Кредит</button>
           </div>
           <div class="delivery">
             <h3 class="title">Доставка</h3>
