--- a/catalog.html
+++ b/catalog.html
@@ -21,10 +21,8 @@
         <form class="search-form" action="#" method="POST">
           <input class="search" type="text" name="search" value="Поиск:">
         </form>
-        <div class="menu-button-wrap">
-          <a href="blank.html">Закладки: 0</a>
-          <a class="cart not-empty-cart" href="blank.html">Корзина: 10</a>
-        </div>
+        <a class="menu-button" href="blank.html">Закладки: 0</a>
+        <a class="menu-button cart not-empty-cart" href="blank.html">Корзина: 10</a>
         <a class="order-button" href="blank.html">Оформить заказ</a>
       </div>
     </div>
@@ -133,7 +131,7 @@
             </ul>
           </fieldset>
           <button class="filter-button" type="submit">Показать</button>
-        </form>        
+        </form>
       </section>
       <div class="sort">
         <p>Сортировка:</p>
@@ -148,12 +146,12 @@
         <ul class="catalog-list">
           <li class="catalog-item">
             <a href="blank.html">
-              <p>Перфоратор BOSCH BFG 6000</p>
-              <p>
+              <p class="img-contain">
                 <img src="img/popular-items/bosch_bfg_6000.jpg" width="144" height="128"
                   alt="Перфоратор BOSCH BFG 6000">
               </p>
             </a>
+            <p>Перфоратор BOSCH BFG 6000</p>
             <p class="old-price">30500 р.</p>
             <p class="new-price">25500 р.</p>
             <div class="catalog-buttons">
@@ -163,12 +161,12 @@
           </li>
           <li class="catalog-item">
             <a href="blank.html">
-              <p>Перфоратор BOSCH BFG 6000</p>
-              <p>
+              <p class="img-contain">
                 <img src="img/popular-items/bosch_bfg_6000.jpg" width="144" height="128"
                   alt="Перфоратор BOSCH BFG 6000">
               </p>
             </a>
+            <p>Перфоратор BOSCH BFG 6000</p>
             <p class="old-price">30500 р.</p>
             <p class="new-price">25500 р.</p>
             <!-- <a href="#">Купить</a>
@@ -176,12 +174,12 @@
           </li>
           <li class="catalog-item">
             <a href="blank.html">
-              <p>Перфоратор BOSCH BFG 6000</p>
-              <p>
+              <p class="img-contain">
                 <img src="img/popular-items/bosch_bfg_6000.jpg" width="144" height="128"
                   alt="Перфоратор BOSCH BFG 9000">
               </p>
             </a>
+            <p>Перфоратор BOSCH BFG 6000</p>
             <p class="old-price">30500 р.</p>
             <p class="new-price">25500 р.</p>
             <!-- <a href="#">Купить</a>
@@ -189,12 +187,12 @@
           </li>
           <li class="catalog-item">
             <a href="blank.html">
-              <p>Перфоратор BOSCH BFG 3000</p>
-              <p>
+              <p class="img-contain">
                 <img src="img/popular-items/bosch_bfg_3000.jpg" width="127" height="112"
                   alt="Перфоратор BOSCH BFG 3000">
               </p>
             </a>
+            <p>Перфоратор BOSCH BFG 3000</p>
             <p class="old-price">22500 р.</p>
             <p class="new-price">15500 р.</p>
             <!-- <a href="#">Купить</a>
@@ -202,12 +200,12 @@
           </li>
           <li class="catalog-item">
             <a href="blank.html">
-              <p>Перфоратор BOSCH BFG 6000</p>
-              <p>
+              <p class="img-contain">
                 <img src="img/popular-items/bosch_bfg_6000.jpg" width="144" height="128"
                   alt="Перфоратор BOSCH BFG 6000">
               </p>
             </a>
+            <p>Перфоратор BOSCH BFG 6000</p>
             <p class="old-price">30500 р.</p>
             <p class="new-price">25500 р.</p>
             <!-- <a href="#">Купить</a>
@@ -215,25 +213,25 @@
           </li>
           <li class="catalog-item">
             <a href="blank.html">
-              <p>Перфоратор BOSCH BFG 2000</p>
-              <p>
+              <p class="img-contain">
                 <img src="img/popular-items/bosch_bfg_2000.jpg" width="127" height="112"
                   alt="Перфоратор BOSCH BFG 2000">
               </p>
             </a>
-            <p class="old-price"></p>
+            <p>Перфоратор BOSCH BFG 2000</p>
+            <p class="old-price hidden-visually">none</p>
             <p class="new-price">12500 р.</p>
             <!-- <a href="#">Купить</a>
           <button>В закладки</button> -->
           </li>
           <li class="catalog-item">
             <a href="blank.html">
-              <p>Перфоратор BOSCH BFG 3000</p>
-              <p>
+              <p class="img-contain">
                 <img src="img/popular-items/bosch_bfg_3000.jpg" width="127" height="112"
                   alt="Перфоратор BOSCH BFG 3000">
               </p>
             </a>
+            <p>Перфоратор BOSCH BFG 3000</p>
             <p class="old-price">22500 р.</p>
             <p class="new-price">15500 р.</p>
             <!-- <a href="#">Купить</a>
@@ -241,26 +239,26 @@
           </li>
           <li class="catalog-item">
             <a href="blank.html">
-              <p>Перфоратор BOSCH BFG 6000</p>
-              <p>
+              <p class="img-contain">
                 <img src="img/popular-items/bosch_bfg_6000.jpg" width="144" height="128"
                   alt="Перфоратор BOSCH BFG 6000">
               </p>
             </a>
-            <p class="new-price">25500 р.</p>
+            <p>Перфоратор BOSCH BFG 6000</p>
             <p class="old-price">30500 р.</p>
+            <p class="new-price">25500 р.</p>
             <!-- <a href="#">Купить</a>
           <button>В закладки</button> -->
           </li>
           <li class="catalog-item">
             <a href="blank.html">
-              <p>Перфоратор BOSCH BFG 2000</p>
-              <p>
+              <p class="img-contain">
                 <img src="img/popular-items/bosch_bfg_2000.jpg" width="127" height="112"
                   alt="Перфоратор BOSCH BFG 2000">
               </p>
             </a>
-            <p class="old-price"></p>
+            <p>Перфоратор BOSCH BFG 2000</p>
+            <p class="old-price hidden-visually">none</p>
             <p class="new-price">12500 р.</p>
             <!-- <a href="#">Купить</a>
           <button>В закладки</button> -->
@@ -283,17 +281,17 @@
       </ul>
     </div>
     <div class="perforator-bar">
-        <section class="perforator-info">
-          <h3 class="title">Пара слов о перфораторах</h3>
-          <p class="perforator-info-text">Перфоратор — универсальный строительный инструмент. Предназначен для сверления
-            и
-            долбления отверстий в
-            кирпиче, бетоне и камне.<br>
-            Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции
-            дрели, шуруповерта и отбойного молотка.<br>
-            В ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и
-            ударная дрель.</p>
-        </section>
+      <section class="perforator-info">
+        <h3 class="title">Пара слов о перфораторах</h3>
+        <p class="perforator-info-text">Перфоратор — универсальный строительный инструмент. Предназначен для сверления
+          и
+          долбления отверстий в
+          кирпиче, бетоне и камне.<br>
+          Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции
+          дрели, шуруповерта и отбойного молотка.<br>
+          В ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и
+          ударная дрель.</p>
+      </section>
     </div>
 
   </main>
