--- a/index.html
+++ b/index.html
@@ -21,10 +21,8 @@
         <form class="search-form" action="#" method="POST">
           <input class="search" type="text" name="search" value="Поиск:">
         </form>
-        <div class="menu-button-wrap">
-          <a href="blank.html">Закладки: 0</a>
-          <a class="cart" href="blank.html">Корзина: 0</a>
-        </div>
+        <a class="menu-button" href="blank.html">Закладки: 0</a>
+        <a class="cart menu-button" href="blank.html">Корзина: 0</a>
         <a class="order-button" href="blank.html">Оформить заказ</a>
       </div>
     </div>
@@ -114,33 +112,44 @@
       </div>
       <ul class="popular-items-list">
         <li class="catalog-item">
-          <a href="#"><img src="img/popular-items/bosch_bfg_9000.jpg" width="184" height="164"
-              alt="Перфоратор BOSCH BFG 9000"></a>
+          <a href="#">
+            <div class="img-contain">
+              <img src="img/popular-items/bosch_bfg_9000.jpg" width="184" height="164" alt="Перфоратор BOSCH BFG 9000">
+            </div>
+          </a>
           <p>Перфоратор BOSCH BFG 9000</p>
           <p class="old-price">32500 р.</p>
           <p class="new-price">25500 р.</p>
         </li>
         <li class="catalog-item">
-          <a href="#"><img src="img/popular-items/bosch_bfg_3000.jpg" width="127" height="112"
-              alt="Перфоратор BOSCH BFG 3000"></a>
+          <a href="#">
+            <div class="img-contain">
+              <img src="img/popular-items/bosch_bfg_3000.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 3000">
+            </div>
+          </a>
           <p>Перфоратор BOSCH BFG 3000</p>
           <p class="old-price">22500 р.</p>
           <p class="new-price">15500 р.</p>
         </li>
         <li class="catalog-item">
-          <a href="#"><img src="img/popular-items/bosch_bfg_6000.jpg" width="144" height="128"
-              alt="Перфоратор BOSCH BFG 6000"></a>
+          <a href="#">
+            <div class="img-contain">
+              <img src="img/popular-items/bosch_bfg_6000.jpg" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
+            </div>
+          </a>
           <p>Перфоратор BOSCH BFG 6000</p>
           <p class="old-price">30500 р.</p>
           <p class="new-price">25500 р.</p>
         </li>
         <li class="catalog-item">
-          <div class="item-pic">
-            <a href="#"><img src="img/popular-items/bosch_bfg_2000.jpg" width="127" height="112"
-                alt="Перфоратор BOSCH BFG 2000"></a>
-            <p>Перфоратор BOSCH BFG 2000</p>
-            <p class="old-price">22500 р.</p>
-            <p class="new-price">12500 р.</p>
+          <a href="#">
+            <div class="img-contain">
+              <img src="img/popular-items/bosch_bfg_2000.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 2000">
+            </div>
+          </a>
+          <p>Перфоратор BOSCH BFG 2000</p>
+          <p class="old-price">22500 р.</p>
+          <p class="new-price">12500 р.</p>
         </li>
       </ul>
     </section>
